--- a/bio-app/package.json
+++ b/bio-app/package.json
@@ -20,12 +20,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@libsql/client": "^0.14.0",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.0",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
@@ -42,9 +45,11 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "drizzle-kit": "^0.30.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
     "prisma": "^5.14.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
